--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <head>
         <title>My awesome web page</title>
     </head>
-  <img src="https://avatars.githubusercontent.com/u/86029789?v=4">
+<img src="https://octodex.github.com/images/vinyltocat.png">
+
 <h1>I'm a header 1!</h1>
 
 Hello there, awesome person!
